[package]
name = "thought_loop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.10"
rocket_codegen="0.4.10"
rocket_contrib={ version="0.4.10",default-features=false, features=["tera_templates","time"]}

#database
diesel = { version = "1.4.7", features = ["postgres"] }

r2d2="0.8.9"
r2d2-diesel="1.0.0"

dotenv="0.15.0"
